infra/k8s/application/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: moneta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: moneta-backend:lite
        ports:
        - containerPort: 8880
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: moneta
spec:
  selector:
    app: backend
  ports:
  - port: 8880
    targetPort: 8880
