infra/k8s/application/06-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: moneta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/haha9430/moneta-frontend:latest
        imagePullPolicy: Always  # GHCR에서 새 이미지를 항상 받아오도록 설정
        ports:
        - containerPort: 8501           # [중요] Streamlit 기본 포트
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: moneta
spec:
  selector:
    app: frontend
  ports:
  - port: 80            # 서비스는 80번으로 받아서 (브라우저 접속 편하게)
    targetPort: 8501    # 컨테이너의 8501번으로 넘겨줌
